# richpyls

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  AUTOMATED_PUBLISHING.md  BADGES.md  BUILD_PUBLISHING.md  CODE_QUALITY.md  LICENSE  PUBLISH.md  README.md  build.sh  bump_version.py  ls.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/pyls/: __init__.py  __main__.py
src/richpyls/: __init__.py  __main__.py
tests/: __init__.py  test_ls.py  test_pyls.py  test_richpyls.py
